--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "^18.3.1",
     "react-beautiful-dnd": "13.1.1",
     "react-bootstrap": "^2.10.4",
+    "react-dnd": "16.0.1",
+    "react-dnd-html5-backend": "16.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
@@ -45,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-beautiful-dnd": "^13.1.8"
   }
 }
