--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@sweetalert2/theme-material-ui": "^5.0.26",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,12 +15,15 @@
     "@types/react": "^18.3.5",
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^18.3.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.15.9",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
