--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react-dom": "^18.3.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
